Consolidate the logic that creates run loop observers for flushing layer tree changes to CoreAnimation https://bugs.webkit.org/show_bug.cgi?id=72106

Reviewed by Anders Carlsson.

Source/WebCore:

Add a class that encapsulates the logic of scheduling, enabling and
invalidating a run loop observer that fires before Core Animation's
commit observer. Clients can subclass LayerFlushSchedulerClient and
implement flushLayers(), which will be called by the observer.

* WebCore.exp.in:
* WebCore.xcodeproj/project.pbxproj:
* platform/graphics/ca/LayerFlushScheduler.cpp: Added.
(WebCore::LayerFlushScheduler::suspend): Suspend scheduling by
invalidating the run loop observer. Keep a count of calls to suspend()
in m_suspendCount.
(WebCore::LayerFlushScheduler::resume): Decrement m_suspendCount.
Install the run loop observer when it reaches 0.
* platform/graphics/ca/LayerFlushSchedulerClient.h: Added.
(WebCore::LayerFlushSchedulerClient::~LayerFlushSchedulerClient):
* platform/graphics/ca/LayerFlushScheduler.h: Added.
* platform/graphics/ca/mac/LayerFlushSchedulerMac.cpp: Added.
(LayerFlushScheduler::LayerFlushScheduler):
(LayerFlushScheduler::~LayerFlushScheduler):
(LayerFlushScheduler::runLoopObserverCallback): Call flushLayers() on
the LayerFlushSchedulerClient.
(LayerFlushScheduler::schedule): Install the run loop observer.
(LayerFlushScheduler::invalidate): Remove the run loop
observer if it is installed.

Source/WebKit/mac:

Remove code that schedules layer flushes and use LayerFlushScheduler instead.

* WebView/WebView.mm:
(-[WebView _close]): Invalidate the run loop observer and destroy the
LayerFlushController.
(LayerFlushController::flushLayers): Perform the work that
layerSyncRunLoopObserverCallBack used to do.
(-[WebView _scheduleCompositingLayerSync]): If layerFlushController has
yet to be created, create it, then schedule a layer flush.
* WebView/WebViewData.h:
(LayerFlushController::create): Create a LayerFlushController that
implements the LayerFlushSchedulerClient interface and contains a
LayerFlushScheduler with itself as the client.
* WebView/WebViewData.mm:
(LayerFlushController::scheduleLayerFlush):
(LayerFlushController::invalidateObserver):
(LayerFlushController::LayerFlushController):

Source/WebKit2:

Remove code that schedules layer flushes and use LayerFlushScheduler instead.

* WebProcess/WebPage/ca/mac/LayerTreeHostCAMac.h: Replace
m_flushPendingLayerChangesRunLoopObserver with m_layerFlushScheduler
and implement the LayerFlushSchedulerClient interface.
* WebProcess/WebPage/ca/mac/LayerTreeHostCAMac.mm:
(WebKit::LayerTreeHostCAMac::LayerTreeHostCAMac): Instantiate
m_layerFlushScheduler with the LayerTreeHost as the client.
(WebKit::LayerTreeHostCAMac::~LayerTreeHostCAMac):
(WebKit::LayerTreeHostCAMac::scheduleLayerFlush): Call LayerFlushScheduler::schedule().
(WebKit::LayerTreeHostCAMac::setLayerFlushSchedulingEnabled): Call
LayerFlushScheduler::suspend() or LayerFlushScheduler::resume().
(WebKit::LayerTreeHostCAMac::invalidate): Call LayerFlushScheduler::invalidate().
(WebKit::LayerTreeHostCAMac::flushLayers): Do the work that
flushPendingLayerChangesRunLoopObserverCallback() used to do.
(WebKit::LayerTreeHostCAMac::didPerformScheduledLayerFlush): Call LayerFlushScheduler::invalidate().

Canonical link: https://commits.webkit.org/88915@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100384 268f45cc-cd09-0410-ab3c-d52691b4dbfc