Source/WebKit/mac/WebView/WebViewData.h
@@ -29,9 +29,12 @@
 
 #import "WebTypesInternal.h"
 #import "WebDelegateImplementationCaching.h"
+#import <WebCore/LayerFlushScheduler.h>
+#import <WebCore/LayerFlushSchedulerClient.h>
 #import <WebCore/PlatformString.h>
 #import <WebCore/WebCoreKeyboardUIMode.h>
 #import <wtf/HashMap.h>
+#import <wtf/PassOwnPtr.h>
 #import <wtf/RetainPtr.h>
 
 namespace WebCore {
@@ -56,6 +59,27 @@ namespace WebCore {
 
 extern BOOL applicationIsTerminating;
 extern int pluginDatabaseClientCount;
+
+#if USE(ACCELERATED_COMPOSITING)
+class LayerFlushController : public WebCore::LayerFlushSchedulerClient {
+public:
+    static PassOwnPtr<LayerFlushController> create(WebView* webView)
+    {
+        return adoptPtr(new LayerFlushController(webView));
+    }
+    
+    virtual void flushLayers();
+    
+    void scheduleLayerFlush();
+    void invalidateObserver();
+    
+private:
+    LayerFlushController(WebView*);
+    
+    WebView* m_webView;
+    WebCore::LayerFlushScheduler m_layerFlushScheduler;
+};
+#endif
 
 // FIXME: This should be renamed to WebViewData.
 @interface WebViewPrivate : NSObject {
@@ -148,8 +172,7 @@ extern int pluginDatabaseClientCount;
     // so that the NSView drawing is visually synchronized with CALayer updates.
     BOOL needsOneShotDrawingSynchronization;
     BOOL postsAcceleratedCompositingNotifications;
-    // Run loop observer used to implement the compositing equivalent of -viewWillDraw
-    CFRunLoopObserverRef layerSyncRunLoopObserver;
+    OwnPtr<LayerFlushController> layerFlushController;
 #endif
 
     NSPasteboard *insertionPasteboard;
